# Clinical-Deidentification-Playground

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  CLAUDE.md  DESIGN_PLAN.md  Dataset_1_2026-04-25.jsonl  Dockerfile  PROJECT_OVERVIEW.md  README.md  SETUP.md  compose.prod.yaml  compose.yaml  modes.json  pyproject.toml  requirements.txt
data/: README.md  modes.json
data/evaluations/: discharge-summaries__clinical-fast.json  discharge-summaries__clinical-transformer-presidio.json  discharge-summaries__clinical-transformer.json  discharge-summaries__presidio.json
data/pipelines/: Clinical-transf_whitelist.json  clin-fast.json  clinical-fast-physionet-label-space.json  clinical-fast.json  clinical-transformer-presidio.json  clinical-transformer.json  cllinbert-physionet.json  (+11 more)
datasets/: mimic-brat.json  physionet-brat-remapped.data.jsonl  physionet-brat-remapped.json  physionet-brat.json  physionet-test.json  physionet-train.json  physionet-valid.json
docs/: README.md  api.md  configuration.md  data-ingestion.md  demo-clinical-samples.md  demo-script.md  deployment.md  detector-label-space-api-plan.md  docker-quickstart.md  evaluation.md  frontend-production-annotate-export-split.md  frontend-production-overlap-conflict-resolution.md  models.md  neuroner-setup.md  pipes-and-pipelines.md  planned-ui.md  staging-smoke.md  synthesis.md  testing-plan-dataset-upload.md  training-core-design.md  transforms-and-composition.md  ui.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend-production/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
inference_runs/: regex-whitelist-blacklist-surrogate_20260410_052555.json
models/: README.md
neuroner-cspmc/: README.md  constraints.txt  requirements.txt
pipelines/: cllinbert-physionet.json  mimic-clinbert-sentence.json  pipeline1.json  regex-whitelist-blacklist-surrogate.json  regexwhitelistblacklist.json  test1.json  test2.json  whitelist-blacklist.json
scripts/: compose_datasets.py  dataset_analytics.py  emit_discharge_eval_snapshots.py  ingest_sredh_chatgpt.py  list_spans_by_label.py  neuroner_export.py  neuroner_train.sh  process_asq_phi.py  process_mimic_noteevents.py  process_physionet.py  setup_neuroner.sh  transform_dataset.py
tests/: conftest.py  test_accumulation.py  test_analytics.py  test_api.py  test_asq_phi.py  test_auth_contract.py  test_blacklist.py  test_brat_ingest.py  test_brat_roundtrip.py  test_compose.py  test_config_openai_env.py  test_custom_ner.py  test_datasets_api.py  test_detector_label_mapping.py  test_dictionaries.py  test_env_file.py  test_eval_pred_label_remap.py  test_eval_redaction.py  test_eval_runner_redaction.py  test_eval_runner_risk_profile.py  test_from_batch.py  test_huggingface_ner.py  test_inference_api.py  test_ingest_eval.py  test_label_space.py  test_labels.py  test_llm_synthesis.py  test_max_body_middleware.py  test_mimic_noteevents.py  test_models.py  test_neuroner_ner.py  test_packs.py  test_phi_labels.py  test_pipe_ui_schema.py  test_pipeline_intermediary.py  test_pipeline_job.py  test_pipelines.py  test_process_modes.py  test_production_api.py  test_production_export_jsonl.py  (+14 more)
(+373 files in other folders)
