[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-deid-playground"
version = "0.1.0"
description = "Modular research platform for clinical PHI detection and redaction"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Michael Lei"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22,<0.1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
scripts = [
    "pandas>=2.0.0",
    "faker>=2.0.0",
]
dev = [
    "clinical-deid-playground[scripts]",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
# Pipe-specific extras — install only what you need
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
ner = [
    "spacy>=3.5.0",
]
pydeid = [
    "pyDeid @ git+https://github.com/GEMINI-Medicine/pyDeid.git",
]
llm = [
    "httpx>=0.27.0",
]
# Everything
all = [
    "clinical-deid-playground[dev,presidio,ner,pydeid,llm]",
]

[project.scripts]
clinical-deid-api = "clinical_deid.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clinical_deid.pipes.whitelist.defaults" = ["*.txt"]
"clinical_deid.pipes.blacklist.defaults" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
